<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="Overdraw"
    tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_detail_name_id"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#408644"
                android:gravity="center_vertical|start"
                android:padding="20dp"
                android:text="@string/movie_name"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/movie_detail_image_id"
                    android:layout_width="150dp"
                    android:layout_height="190dp"
                    android:layout_weight="0.20"
                    android:contentDescription="@string/movie_detail_image_description"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_detail_year_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/movie_detail_duration_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/minute" />

                    <TextView
                        android:id="@+id/movie_detail_rating_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/rating" />

                    <Button
                        android:id="@+id/movie_detail_make_favorite_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="15dp"
                        android:background="#1bdde4"
                        android:text="@string/make_as_favorite" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_detail_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#9f9e9e" />

            <TextView
                android:id="@+id/movie_detail_trailer_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/trailers_header"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_trailer_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:overScrollMode="never">

            </android.support.v7.widget.RecyclerView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#9f9e9e" />

            <TextView
                android:id="@+id/movie_detail_review_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/review_header"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_review_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:overScrollMode="never">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
